# pytorch-library

./: .gitignore  LICENSE  Pipfile  README.md  example_model.py  load_model.py  optimizer.py  pyproject.toml  ranger.py  requirements.txt  train.py  train_2.py  train_3.py
conf/: config.yaml
d/: imagenette.py  isic_2024_challenge.py
deepspeed/: ds_config_zero0.json  ds_config_zero1.json  ds_config_zero2.json  ds_config_zero3.json
hooks/: __init__.py  logger.py  wandb.py
models/: alexnet.py  efficientnet.py  googlenet.py  mobilenetv1.py  resnet.py  zfnet.py
models/cnn/: alexnet.py  densenet.py  efficientnet.py  efficientnetv2.py  googlenet.py  mobilenetv1.py  mobilenetv2.py  resnet.py  resnext.py  squeezenet.py  vggnet.py  xceptionnet.py  zfnet.py
models/gan/: cyclegan.py  dcgan.py
scripts/: isic-2024-challenge_webdataset.py  isic-2024-challenge_xgboost.py
utils/: loadmodel.py  lrfinder.py  savemodel.py
